--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
     "version": 2,
-    "name": "music-album",
     "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
+        {
+            "src": "./app.js",
+            "use": "@vercel/node"
+        }
     ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
-    ]
- }
+        "routes": [
+                {
+                    "src": "/.*",
+                    "dest": "app.js"
+                }
+        ]
+}
